DB未登録のユーザーを自動でDBに追加する機能を削除かつ専用ページに遷移するように変更